Fixed sizing  issues with copyright text and with extra margin space on mobile.

--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,8 @@ p {
 	padding-left: 15px;
 }
 
+/*Slider on Homepage*/
+
 .slide a{
 	color: #2f4f4f;
 }
@@ -70,6 +72,13 @@ p {
 	text-align: center;
 }
 
+#sliders {
+	width: 500px;
+	height: 100px;
+}
+
+/*Footer*/
+
 .footer-wrapper {
 	border-width: 1px 0 0 0;
 	text-align: center;
@@ -77,6 +86,7 @@ p {
 
 footer div p {
 	font-family: 'PT Sans', sans-serif;
+	padding-left: 0;
 }
 
 footer div div a {
@@ -85,6 +95,8 @@ footer div div a {
 	margin-left: 15px;
 	margin-right: 15px;
 }
+
+/*Construction Banner */
 
 #construction {
 	background-color: #2f4f4f;
@@ -114,10 +126,14 @@ footer div div a {
 	color: #000000;
 }
 
+
+
 /* Contact Page Styling */
 .contact-text a{
 	color: #2f4f4f;
 }
+
+
 
 /* About Page Styling*/
 
@@ -133,6 +149,9 @@ footer div div a {
 	font-weight: bold;
 }
 
+
+
+/*Media Queries*/
 @media (max-width: 1024px) {
   h1 {
     font-size: 5.5em;
@@ -154,6 +173,10 @@ footer div div a {
 
 	nav {
 		float: none;
+	}
+
+	#sliders {
+		width: 320px;
 	}
 
 }
